[project]
name = "agentstack-agents"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pyyaml>=6.0.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "ddgs (>=9.4.3,<10.0.0)",
    "beeai-framework>=0.1.42",
    "agentstack-sdk>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.uv.workspace]
members = [
    "recipe_generator",
]

[project.scripts]
server = "agentstack_agents.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
